--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
 
   <a href="jacket.html" class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
-      <img class="img-flex" src="images/work-icon-01.png" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-01.png" alt="">
       <div class="content center-contents">
         <h2 class="gutter-half">Yellow Jackets</h2>
       </div>
@@ -28,7 +28,7 @@ layout: default
 
   <a href="iscream.html" class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
-      <img class="img-flex" src="images/work-icon-02.png" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-02.png" alt="">
       <div class="content center-contents">
         <h2 class="gutter-half">I Scream</h2>
       </div>
