--- a/iscream.html
+++ b/iscream.html
@@ -7,7 +7,7 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="images/i-scream/i-scream-screans.png" alt="">
+        <img class="" src="{{site.baseurl}}/images/i-scream/i-scream-screans.png" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
@@ -15,7 +15,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="images/i-scream/flow.png" alt="">
+        <img class="" src="{{site.baseurl}}/images/i-scream/flow.png" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
