--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
   <!--BANNER-->
   <div class="banner">
-    <img class="me img-flex valign-middle" src="images/me.png" alt="">
+    <img class="me img-flex valign-middle" src="{{site.baseurl}}images/me.png" alt="">
 
       <div class="text valign-middle">
         <div>
@@ -15,7 +15,7 @@ layout: default
 
 
   <!--PORTFOLIO-->
-<section class="grid" id="work">
+<section class="grid image-pad" id="work" >
 
   <a href="jacket.html" class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
