--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<footer id="contact" class="text-center">
-  <p class="pad-t-2">CONTACT ME</p>
+<section id="contact" class="contact-me text-center">
+  <h3 class="pad-t-2">CONTACT ME</h3>
   <!--FORM-->
   <form class="push-0" action="https://formspree.io/jaimie.erin@yahoo.ca" method="POST">
     <div class="push">
@@ -22,4 +22,5 @@ layout: default
       <button class="btn btn-light" type="submit">SUBMIT</button>
     </div>
   </form>
+</section>
   <!--FORM END-->
