--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@ layout: default
   <!--PORTFOLIO-->
 <section class="grid image-pad" id="work" >
 
-  <a href="jacket.html" class="card unit s-1 m-1-2 l-1-3">
+  <a href="{{site.baseurl}}jacket" class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-01.png" alt="">
       <div class="content center-contents">
-        <h2 class="gutter-half">Yellow Jackets</h2>
+        <h2 class="">Yellow Jackets</h2>
       </div>
     </div>
   </a>
 
-  <a href="iscream.html" class="card unit s-1 m-1-2 l-1-3">
+  <a href="{{site.baseurl}}iscream" class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-02.png" alt="">
       <div class="content center-contents">
-        <h2 class="gutter-half">I Scream</h2>
+        <h2 class="">I Scream</h2>
       </div>
     </div>
   </a>
@@ -39,7 +39,7 @@ layout: default
     <div class="relative">
       <img class="img-flex" src="images/work-icon-03.png" alt="">
       <div class="content center-contents">
-        <h2 class="gutter-half">Nerd Alert</h2>
+        <h2 class="">Nerd Alert</h2>
       </div>
     </div>
   </a>
@@ -48,7 +48,7 @@ layout: default
     <div class="relative">
       <img class="img-flex" src="images/work-icon-04.png" alt="">
       <div class="content center-contents">
-        <h2 class="gutter-half">Adventure</h2>
+        <h2 class="">Adventure</h2>
       </div>
     </div>
   </a>
@@ -57,7 +57,7 @@ layout: default
     <div class="relative">
       <img class="img-flex" src="images/square.jpg" alt="">
       <div class="content center-contents">
-        <h2 class="gutter-half">Title</h2>
+        <h2 class="">Title</h2>
       </div>
     </div>
   </a>
@@ -66,7 +66,7 @@ layout: default
     <div class="relative">
       <img class="img-flex" src="images/square.jpg" alt="">
       <div class="content center-contents">
-        <h2 class="gutter-half">Title</h2>
+        <h2 class="">Title</h2>
       </div>
     </div>
   </a>
