--- a/iscream.html
+++ b/iscream.html
@@ -7,31 +7,35 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/i-scream/i-scream-screans.png" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/i-scream-screans.png" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
-        <p class="milli"> With the crazy success of the 2017’s remake of Stephen Kings’ IT I wanted to create a poster to showcase the film. </p>
+        <p class="milli"> ABOUT</p>
       </div>
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/i-scream/flow.png" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/flow.png" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
-        <p class="milli">Along with all the ideas I got while brainstorming ideas I made connections of the film to several other books, films and games. In my research I found a common connection between the movie and one of my favourite video games entitled Little Nightmares. Although two completely different horror stories they each have a child that sports a yellow jacket. </p>
+        <p class="milli">PROCESS</p>
       </div>
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="images/rectangle.jpg" alt="">
-      </div>
-
-      <div class="card unit s-1 m-2-3 island">
-        <img class="" src="images/rectangle.jpg" alt="">
+        <img class="" src="{{site.baseurl}}/images/rectangle.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
-        <p class="milli">With this knowledge I tried to see if any pieces of entertainment of the similar genera had a character with a yellow jacket. With my research I came up with Tim Burtons’ 2009 film Coraline. With this book, videogame and movie in mind I created three yellow jackets with different props in each poster to tell three different stories.</p>
+        <p class="milli">SKETCHES</p>
+      </div>
+
+      <div class="embed embed-16by9">
+        <iframe class="embed-item" src="https://player.vimeo.com/video/241331343?title=0&byline=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+
+      <div class="unit s-1 m-1-3 island">
+        <p class="milli">VIDEO.</p>
       </div>
     </div>
   </section>
