--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
 
   <a href="{{site.baseurl}}jacket" class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-01.png" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-01.jpg" alt="">
       <div class="content center-contents">
         <h2 class="">Yellow Jackets</h2>
       </div>
@@ -28,7 +28,7 @@ layout: default
 
   <a href="{{site.baseurl}}iscream" class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-02.png" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-02.jpg" alt="">
       <div class="content center-contents">
         <h2 class="">I Scream</h2>
       </div>
@@ -37,7 +37,7 @@ layout: default
 
   <a class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
-      <img class="img-flex" src="images/work-icon-03.png" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-03.jpg" alt="">
       <div class="content center-contents">
         <h2 class="">Nerd Alert</h2>
       </div>
@@ -46,7 +46,7 @@ layout: default
 
   <a class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
-      <img class="img-flex" src="images/work-icon-04.png" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-04.jpg" alt="">
       <div class="content center-contents">
         <h2 class="">Adventure</h2>
       </div>
@@ -55,18 +55,18 @@ layout: default
 
   <a class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
-      <img class="img-flex" src="images/square.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-06.jpg" alt="">
       <div class="content center-contents">
-        <h2 class="">Title</h2>
+        <h2 class="">Vans</h2>
       </div>
     </div>
   </a>
 
   <a class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
-      <img class="img-flex" src="images/square.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
       <div class="content center-contents">
-        <h2 class="">Title</h2>
+        <h2 class="">The Blurry Pixel</h2>
       </div>
     </div>
   </a>
