tying to push to github

--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<section id="contact" class="contact-me text-center">
-  <h3 class="pad-t-2">CONTACT ME</h3>
+<section id="contact" class="grid contact-me text-center">
+  <h3 class="unit s-1 pad-t-2">CONTACT ME</h3>
   <!--FORM-->
-  <form class="push-0" action="https://formspree.io/jaimie.erin@yahoo.ca" method="POST">
+  <form class="unit s-1" action="https://formspree.io/jaimie.erin@yahoo.ca" method="POST">
     <div class="push">
       <label for="name">NAME</label>
       <input id="name" name="name" required>
