--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ layout: default
     </div>
   </a>
 
-  <a class="card unit s-1 m-1-2 l-1-3">
+  <a href="{{site.baseurl}}vans" class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-06.jpg" alt="">
       <div class="content center-contents">
