fixed images and footer on mobile

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
   <!--BANNER-->
   <div class="banner">
-    <img class="me img-flex valign-middle" src="{{site.baseurl}}images/me.png" alt="">
+    <img class="me img-flex valign-middle" src="{{site.baseurl}}/images/me.png" alt="">
 
       <div class="text valign-middle">
         <div>
