--- a/jacket.html
+++ b/jacket.html
@@ -7,7 +7,7 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/yellow-jacket.png" alt="">
+        <img class="" src="{{site.baseurl}}/images/jackets/jacket.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
@@ -15,7 +15,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/rectangle.jpg" alt="">
+        <img class="" src="{{site.baseurl}}/images/jackets/thought.png" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
@@ -23,7 +23,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="images/rectangle.jpg" alt="">
+        <img class="" src="{{site.baseurl}}/images/jackets/sketch.jpg" alt="">
       </div>
 
       <div class="card unit s-1 m-2-3 island">
