--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 layout: default
 ---
   <!--BANNER-->
-  <div class="banner">
-    <img class="me img-flex valign-middle" src="{{site.baseurl}}/images/me.png" alt="">
+  <div class="banner grid grid-middle">
 
-      <div class="text valign-middle">
+
+      <div class="text unit xs-1 s-1-2">
         <div>
           <h2 class="">Welcome</h2>
         </div>
         <p>Graphic Designer</p>
       </div>
+      <div class=" unit xs-1 s-1-2">
+        <img class="img-flex" src="{{site.baseurl}}/images/me.png" alt="">
+      </div>
     </div>
+
+
 
 
   <!--PORTFOLIO-->
