--- a/index.html
+++ b/index.html
@@ -2,19 +2,30 @@
 layout: default
 ---
   <!--BANNER-->
-  <div class="banner grid grid-middle">
+  <div class="banner-large">
+      <img class="me1 img-flex valign-middle" src="{{site.baseurl}}/images/me.png" alt="">
 
-
-      <div class="text unit xs-1 s-1-2">
-        <div>
-          <h2 class="">Welcome</h2>
+        <div class="text valign-middle">
+          <div>
+            <h2 class="">Welcome</h2>
+          </div>
+          <p>Graphic Designer</p>
         </div>
-        <p>Graphic Designer</p>
       </div>
-      <div class=" unit xs-1 s-1-2">
-        <img class="img-flex" src="{{site.baseurl}}/images/me.png" alt="">
+
+
+      <div class="banner-small">
+        <div class="imagebanner">
+          <img class="me2 img-flex" src="{{site.baseurl}}/images/me.png" alt="">
+        </div>
+
+        <div class="text2">
+          <div>
+            <h2 class="">Welcome</h2>
+          </div>
+          <p>Graphic Designer</p>
+        </div>
       </div>
-    </div>
 
 
 
@@ -67,7 +78,7 @@ layout: default
     </div>
   </a>
 
-  <a class="card unit s-1 m-1-2 l-1-3">
+  <a href="{{site.baseurl}}blurry" class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
       <div class="content center-contents">
