--- a/jacket.html
+++ b/jacket.html
@@ -11,7 +11,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1-3 island">
-        <p class="milli"> With the crazy success of the 2017’s remake of Stephen Kings’ IT I wanted to create a poster to showcase the film. </p>
+        <p class="milli"> With the crazy success of the 2017’s remake of Stephen Kings’ IT I wanted to create a poster to showcase the film with an illustrative look. Before starting sketches I did my research on simplistic posters to see what kind of approaches other artists have taken. My biggest inspiration for simplistic posters was the work of Saul Bass. </p>
       </div>
 
       <div class="card unit s-1 m-2-3 island">
@@ -19,19 +19,22 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1-3 island">
-        <p class="milli">Along with all the ideas I got while brainstorming ideas I made connections of the film to several other books, films and games. In my research I found a common connection between the movie and one of my favourite video games entitled Little Nightmares. Although two completely different horror stories they each have a child that sports a yellow jacket. </p>
+        <p class="milli">After getting inspiration I began brainstorming ideas for a poster by creating a spider graph. With this I was able to write down everything that came to mind when thinking about the movie. During my brainstorming I made connections to several other books, films and games. Connections that would not be made right away. The connections that caught my attention were the common connection between the movie and one of my favourite video games entitled Little Nightmares. Although two completely different horror stories they each have a child that sports a yellow jacket. Furthermore I was able to come up with another fantasy/thriller movie that included a child with a yellow jacket, Tim Burtons' Coraline. </p>
       </div>
 
       <div class="card unit s-1 m-2-3 island">
         <img class="" src="{{site.baseurl}}/images/jackets/sketch.jpg" alt="">
       </div>
 
+      <div class="unit s-1 m-1-3 island">
+        <p class="milli">With the yellow jacket connection between this book, videogame and movie I decided to create a multi poster piece and create a poster for each creation. With research done for each piece I began making sketches to come up with a look for each poster. Each poster would be created with a yellow jacket but use different props in each poster to tell three different stories.</p>
+
       <div class="card unit s-1 m-2-3 island">
         <img class="" src="images/rectangle.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
-        <p class="milli">With this knowledge I tried to see if any pieces of entertainment of the similar genera had a character with a yellow jacket. With my research I came up with Tim Burtons’ 2009 film Coraline. With this book, videogame and movie in mind I created three yellow jackets with different props in each poster to tell three different stories.</p>
+        <p class="milli"></p>
       </div>
     </div>
   </section>
