--- a/blurry.html
+++ b/blurry.html
@@ -7,35 +7,35 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/blurry/sign.jpg" alt="">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/sign.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
-        <p class="milli">During my time in the graphic design program I got to redesign a brand for a small company. </p>
+        <p class="milli">During my time in the graphic design program I got to redesign a brand for a small company. The Blurry Pixel is a small gaming bar in downtown Ottawa where people can get drinks and play video games into the night. The owner came up with the name 'The Blurry Pixel' because when you start to stare at a screen for a long time things start to blur and look pixelated. The colours green and black were chosen because that was the colour of monochrome monitors which were very common in the early days of computing.</p>
       </div>
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/blurry/sketch.jpg" alt="">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/sketch.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
-        <p class="milli">Sketches </p>
+        <p class="milli">The company used a wordmark to advertise the location. The name of the establishment is typed in a green pixel font that is easily recognisable but not very visually appealing. To redesign the brand I began coming up with logos sketches for the company. During the sketching process I tried to keep gaming aspects in the art since the bar's main feature is its video games. Further more when using gaming icons I wanted to use something that would be easily recognizable to people who do not play video games.</p>
       </div>
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/blurry/logos.jpg" alt="">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/logos.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
-        <p class="milli">Sketches </p>
+        <p class="milli">Once two top logos were picked I played around with the original company colours since the owner wanted those to stay. The colours were applied in many differnet ways to find the most appealing look. Since every logo should have a coloured version and a black and white version I then tried different ways to apply the black and white to make it stand out.</p>
       </div>
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/blurry/final.jpg" alt="">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/final.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
-        <p class="milli">With this knowledge I tried to see if any pieces of entertainment of the similar genera had a character with a yellow jacket. With my research I came up with Tim Burtons’ 2009 film Coraline. With this book, videogame and movie in mind I created three yellow jackets with different props in each poster to tell three different stories.</p>
+        <p class="milli">Once a final logo was chosen in colour and in black and white I was able to create a branding guide for the company. The branding guide shows how the logos, wordmarks, colours and photography should be used.</p>
       </div>
     </div>
 
