--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ layout: default
     </div>
   </a>
 
-  <a class="card unit s-1 m-1-2 l-1-3">
+  <a href="{{site.baseurl}}nerd" class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-03.jpg" alt="">
       <div class="content center-contents">
@@ -60,7 +60,7 @@ layout: default
     </div>
   </a>
 
-  <a class="card unit s-1 m-1-2 l-1-3">
+  <a href="{{site.baseurl}}adventure" class="card unit s-1 m-1-2 l-1-3">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-04.jpg" alt="">
       <div class="content center-contents">
