--- a/nerd.html
+++ b/nerd.html
@@ -7,7 +7,7 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/jackets/jacket.jpg" alt="">
+        <img class="" src="{{site.baseurl}}/images/nerd/shirt.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
