image size changes

--- a/blurry.html
+++ b/blurry.html
@@ -41,7 +41,7 @@ layout: default
 
 
 
-
+  <div class="island">
     <div class="slideshow-container">
 
     <div class="mySlides fade">
@@ -98,6 +98,7 @@ layout: default
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
     </div>
+  </div>
     <br>
 
     <div class="dots" style="text-align:center">
