--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
 
       <div class="banner-small">
         <div class="imagebanner">
-          <img class="me2 img-flex" src="{{site.baseurl}}/images/me.png" alt="">
+          <img class="me2 img-flex" src="{{site.baseurl}}/images/me1.png" alt="">
         </div>
 
         <div class="text2">
