--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
 
       <div class="banner-small">
         <div class="imagebanner">
-          <img class="me2 img-flex" src="{{site.baseurl}}/images/me1.png" alt="">
+          <img class="me2 img-flex" src="{{site.baseurl}}/images/me.png" alt="">
         </div>
 
         <div class="text2">
@@ -90,6 +90,24 @@ layout: default
 </section>
 
 
-<div>
-
-</div>
+<section id="contact" class="grid contact-me text-center">
+  <h3 class="unit s-1 pad-t-2">CONTACT ME</h3>
+  <!--FORM-->
+  <form class="unit s-1" action="https://formspree.io/jaimie.erin@yahoo.ca" method="POST">
+    <div class="push">
+      <label for="name">NAME</label>
+      <input id="name" name="name" required>
+    </div>
+    <div class="push">
+      <label for="email">E-MAIL</label>
+      <input id="email" type="email" placeholder="hey@company.ca" name="email" required>
+    </div>
+    <div class="push">
+      <label for="details">What can I do for you?</label>
+      <textarea id="details" name="message" required></textarea>
+    </div>
+    <div>
+      <button class="btn btn-light" type="submit">SUBMIT</button>
+    </div>
+  </form>
+</section>
