--- a/iscream.html
+++ b/iscream.html
@@ -7,7 +7,7 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/i-scream-screans.png" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/i-scream-screans.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
