--- a/jacket.html
+++ b/jacket.html
@@ -15,7 +15,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/jackets/thought.png" alt="">
+        <img class="" src="{{site.baseurl}}/images/jackets/thought.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
@@ -31,7 +31,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/jackets/case.jpg" alt="">
+        <img class="" src="{{site.baseurl}}/images/jackets/case1.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
