--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@ layout: default
 
 
 <section id="contact" class="grid contact-me text-center">
-  <h3 class="unit s-1 pad-t-2">CONTACT ME</h3>
+  <h3 class="unit xs-1 pad-t-2">CONTACT ME</h3>
   <!--FORM-->
-  <form class="unit s-1" action="https://formspree.io/jaimie.erin@yahoo.ca" method="POST">
+  <form class="unit xs-1" action="https://formspree.io/jaimie.erin@yahoo.ca" method="POST">
     <div class="push">
       <label for="name">NAME</label>
       <input id="name" name="name" required>
