--- a/index.html
+++ b/index.html
@@ -2,28 +2,30 @@
 layout: default
 ---
   <!--BANNER-->
-  <div class="banner-large">
-      <img class="me1 img-flex valign-middle" src="{{site.baseurl}}/images/me.png" alt="">
+  <div class="banner grid">
+    <div class="unit s-1-2">
+      <img class="picture img-flex" src="{{site.baseurl}}/images/jaimie.png" alt="">
+    </div>
 
-        <div class="text valign-middle">
-          <div>
-            <h2 class="">Welcome</h2>
-          </div>
-          <p>Graphic Designer</p>
+      <div class="unit bannertext s-1-2">
+        <div>
+          <h2 class="">Welcome</h2>
         </div>
+        <p>My name is Jaimie and I am a graphic designer located in Ottawa, Ontario. I specialize in <strong>illustration</strong>, <strong>branding</strong> and <strong>motion</strong></p>
       </div>
+    </div>
 
 
       <div class="banner-small">
         <div class="imagebanner">
-          <img class="me2 img-flex" src="{{site.baseurl}}/images/me.png" alt="">
+          <img class="wphoto img-flex" src="{{site.baseurl}}/images/creature.png" alt="">
         </div>
 
         <div class="text2">
           <div>
             <h2 class="">Welcome</h2>
           </div>
-          <p>Graphic Designer</p>
+          <p>My name is Jaimie and I am a graphic designer located in Ottawa, Ontario. I specialize in <strong>illustration</strong>, <strong>branding</strong> and <strong>motion</strong></p>
         </div>
       </div>
 
@@ -31,9 +33,9 @@ layout: default
 
 
   <!--PORTFOLIO-->
-<section class="grid image-pad" id="work" >
+<section class="grid" id="work" >
 
-  <a href="{{site.baseurl}}jacket" class="card unit s-1 m-1-2 l-1-3">
+  <a href="{{site.baseurl}}jacket" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-01.jpg" alt="">
       <div class="content center-contents">
@@ -42,7 +44,7 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}iscream" class="card unit s-1 m-1-2 l-1-3">
+  <a href="{{site.baseurl}}iscream" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-02.jpg" alt="">
       <div class="content center-contents">
@@ -51,7 +53,7 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}nerd" class="card unit s-1 m-1-2 l-1-3">
+  <a href="{{site.baseurl}}nerd" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-03.jpg" alt="">
       <div class="content center-contents">
@@ -60,7 +62,7 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}adventure" class="card unit s-1 m-1-2 l-1-3">
+  <a href="{{site.baseurl}}adventure" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-04.jpg" alt="">
       <div class="content center-contents">
@@ -69,7 +71,7 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}vans" class="card unit s-1 m-1-2 l-1-3">
+  <a href="{{site.baseurl}}vans" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-06.jpg" alt="">
       <div class="content center-contents">
@@ -78,7 +80,7 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}blurry" class="card unit s-1 m-1-2 l-1-3">
+  <a href="{{site.baseurl}}blurry" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
       <div class="content center-contents">
