trying to make the banner work again

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: default
 ---
   <!--BANNER-->
   <div class="banner grid">
-    <div class="unit s-1-2">
+    <div class="unit s-1-2 l-1-2">
       <img class="picture img-flex" src="{{site.baseurl}}/images/jaimie.png" alt="">
     </div>
 
-      <div class="unit bannertext s-1-2">
+      <div class="unit bannertext s-1-2 l-1-2">
         <div>
           <h2 class="">Welcome</h2>
         </div>
@@ -31,7 +31,7 @@ layout: default
 
 
 
-
+<body>
   <!--PORTFOLIO-->
 <section class="grid" id="work" >
 
@@ -89,7 +89,29 @@ layout: default
     </div>
   </a>
 
+  <a href="{{site.baseurl}}blurry" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
+      <div class="content center-contents">
+        <h2 class="">The Blurry Pixel</h2>
+      </div>
+    </div>
+  </a>
+
+  <a href="{{site.baseurl}}blurry" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
+      <div class="content center-contents">
+        <h2 class="">The Blurry Pixel</h2>
+      </div>
+    </div>
+  </a>
 </section>
+
+
+<!--EMPTY PIC-->
+
+<!--EMPTY PIC END-->
 
 
 <section id="contact" class="grid contact-me text-center">
@@ -113,3 +135,4 @@ layout: default
     </div>
   </form>
 </section>
+</body>
