--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 ---
 layout: default
 ---
+
+
   <!--BANNER-->
-  <div class="banner grid">
+
+  <div class="banner grid grid-middle">
     <div class="unit s-1-2 l-1-2">
-      <img class="picture img-flex" src="{{site.baseurl}}/images/jaimie.png" alt="">
+      <img class="picture img-flex" src="{{site.baseurl}}/images/me.png" alt="">
     </div>
 
-      <div class="unit bannertext s-1-2 l-1-2">
-        <div>
-          <h2 class="">Welcome</h2>
-        </div>
+      <div class="unit island bannertext s-1-2 l-1-2">
+        <h2 class="">Welcome</h2>
         <p>My name is Jaimie and I am a graphic designer located in Ottawa, Ontario. I specialize in <strong>illustration</strong>, <strong>branding</strong> and <strong>motion</strong></p>
       </div>
     </div>
@@ -18,7 +19,7 @@ layout: default
 
       <div class="banner-small">
         <div class="imagebanner">
-          <img class="wphoto img-flex" src="{{site.baseurl}}/images/creature.png" alt="">
+          <img class="photo img-flex" src="{{site.baseurl}}/images/leaf.jpg" alt="">
         </div>
 
         <div class="text2">
@@ -110,7 +111,8 @@ layout: default
 
 
 <!--EMPTY PIC-->
-
+<div class="empty">
+  </div>
 <!--EMPTY PIC END-->
 
 
