--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}blurry" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}canadian" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-07.jpg" alt="">
       <div class="content center-contents">
-        <h2 class="">The Blurry Pixel</h2>
+        <h2 class="">Canadian</h2>
       </div>
     </div>
   </a>
@@ -111,8 +111,7 @@ layout: default
 
 
 <!--EMPTY PIC-->
-<div class="empty">
-  </div>
+
 <!--EMPTY PIC END-->
 
 
