--- a/index.html
+++ b/index.html
@@ -4,31 +4,28 @@ layout: default
 
 
   <!--BANNER-->
-
-  <div class="banner grid grid-middle">
-    <div class="unit s-1-2 l-1-2">
-      <img class="picture img-flex" src="{{site.baseurl}}/images/me.png" alt="">
+<div class=bannerbg>
+  <div class="banner grid grid-middle wrapper">
+    <div class="unit s-1-3">
+      <img class="picture img-flex" src="{{site.baseurl}}/images/erin.png" alt="">
     </div>
 
-      <div class="unit island bannertext s-1-2 l-1-2">
-        <h2 class="">Welcome</h2>
-        <p>My name is Jaimie and I am a graphic designer located in Ottawa, Ontario. I specialize in <strong>illustration</strong>, <strong>branding</strong> and <strong>motion</strong></p>
-      </div>
+    <div class="unit island bannertext s-2-3">
+      <h2 class="">Welcome</h2>
+      <p>My name is Jaimie and I am a graphic designer located in Ottawa, Ontario. I specialize in <strong>illustration</strong>, <strong>branding</strong> and <strong>motion</strong></p>
     </div>
+  </div>
+</div>
 
 
-      <div class="banner-small">
-        <div class="imagebanner">
-          <img class="photo img-flex" src="{{site.baseurl}}/images/leaf.jpg" alt="">
-        </div>
-
-        <div class="text2">
-          <div>
-            <h2 class="">Welcome</h2>
-          </div>
-          <p>My name is Jaimie and I am a graphic designer located in Ottawa, Ontario. I specialize in <strong>illustration</strong>, <strong>branding</strong> and <strong>motion</strong></p>
-        </div>
-      </div>
+<div class="banner-small">
+  <div class="text2">
+    <div>
+      <h2 class="">Welcome</h2>
+    </div>
+    <p>My name is Jaimie and I am a graphic designer located in Ottawa, Ontario. I specialize in <strong>illustration</strong>, <strong>branding</strong> and <strong>motion</strong></p>
+  </div>
+</div>
 
 
 
@@ -36,11 +33,11 @@ layout: default
   <!--PORTFOLIO-->
 <section class="grid" id="work" >
 
-  <a href="{{site.baseurl}}jacket" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}blurry" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-01.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
       <div class="content center-contents">
-        <h2 class="">Yellow Jackets</h2>
+        <h3 class="">The Blurry Pixel</h3>
       </div>
     </div>
   </a>
@@ -49,7 +46,7 @@ layout: default
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-02.jpg" alt="">
       <div class="content center-contents">
-        <h2 class="">I Scream</h2>
+        <h3 class="">I Scream</h3>
       </div>
     </div>
   </a>
@@ -58,16 +55,16 @@ layout: default
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-03.jpg" alt="">
       <div class="content center-contents">
-        <h2 class="">Nerd Alert</h2>
+        <h3 class="">Nerd Alert</h3>
       </div>
     </div>
   </a>
 
-  <a href="{{site.baseurl}}adventure" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}fox" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-04.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-08.jpg" alt="">
       <div class="content center-contents">
-        <h2 class="">Adventure</h2>
+        <h3 class="">Black Fox Coffee</h3>
       </div>
     </div>
   </a>
@@ -76,37 +73,39 @@ layout: default
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-06.jpg" alt="">
       <div class="content center-contents">
-        <h2 class="">Vans</h2>
+        <h3 class="">Vans</h3>
       </div>
     </div>
   </a>
 
-  <a href="{{site.baseurl}}blurry" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}jacket" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-01.jpg" alt="">
       <div class="content center-contents">
-        <h2 class="">The Blurry Pixel</h2>
+        <h3 class="">Yellow Jackets</h3>
       </div>
     </div>
   </a>
+
 
   <a href="{{site.baseurl}}canadian" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-07.jpg" alt="">
       <div class="content center-contents">
-        <h2 class="">Canadian</h2>
+        <h3 class="">Canadian</h3>
       </div>
     </div>
   </a>
 
-  <a href="{{site.baseurl}}blurry" class="card unit xs-1-2 m-1-2 l-1-4">
+  <a href="{{site.baseurl}}adventure" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-05.jpg" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-04.jpg" alt="">
       <div class="content center-contents">
-        <h2 class="">The Blurry Pixel</h2>
+        <h3 class="">Adventure</h3>
       </div>
     </div>
   </a>
+
 </section>
 
 
@@ -116,7 +115,7 @@ layout: default
 
 
 <section id="contact" class="grid contact-me text-center">
-  <h3 class="unit xs-1 pad-t-2">CONTACT ME</h3>
+  <h2 class="unit xs-1 pad-t-2">CONTACT ME</h2>
   <!--FORM-->
   <form class="unit xs-1" action="https://formspree.io/jaimie.erin@yahoo.ca" method="POST">
     <div class="push">
