--- a/adventure.html
+++ b/adventure.html
@@ -6,32 +6,32 @@ layout: default
     <h3 class="island">Adventure</h3>
     <div class="pieces grid">
 
-      <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/adventure/poster.jpg" alt="">
+      <div class="card unit s-1 m-1 l-2-3 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/adventure/poster.jpg" alt="">
+      </div>
+
+      <div class="unit s-1 m-1 l-1-3 island">
+        <p class="milli">Isometrics is a method for visually representing three-dimensional objects in two dimensions in technical and engineering drawings. It is a really unique style of art that can show a three dimentional world and design. Minecraft was what gave me most of my inspiration because that is the best example of an isometric world. It is a world where everything is made of cubes so it helped me how things look in three dimentions. The first thing that came to my mind was that I wanted to try and represent a video game with an isometric world. When anylizing the Minecraft world the next video game that came to mind was the Uncharted series. This series follows a charater named Nathan Drake through his adventures to find treasure. With that in mind I knew I wanted to show the process of finding treasure.</p>
+      </div>
+
+      <div class="card unit s-1 m-1-2 l-2-3 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/adventure/items.jpg" alt="">
+      </div>
+
+      <div class="unit s-1 m-1-2 l-1-3 island">
+        <p class="milli">With my theme in mind I began sketching anything that I thought related to the theme. I planned out how I wanted my area to look first and mapped out what each layer would represent. When it comes to adventure and treasure hunting the first thing that came to mind caves. I used caves as my starting point and started from the bottom up of my isometric world. I began sketching out everything I could think of that would be in caves like ghosts, treasure, torches, jewels, bones, etc. Once I was done that tear I move up to surface and began making a forest. Once the forest was complete I began on the next tear and combined the water route and dirt road route into one so that the piece wouldn't get too tall. Finally it was toped off with a pirate ship to give it a dynamic topper.</p>
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/adventure/painting.jpg" alt="">
+      </div>
+
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/adventure/room.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
-        <p class="milli"> About </p>
-      </div>
-
-      <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/rectangle.jpg" alt="">
-      </div>
-
-      <div class="unit s-1 m-1-3 island">
-        <p class="milli">Sketches </p>
-      </div>
-
-      <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/rectangle.jpg" alt="">
-      </div>
-
-      <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/rectangle.jpg" alt="">
-      </div>
-
-      <div class="unit s-1 m-1-3 island">
-        <p class="milli">With this knowledge I tried to see if any pieces of entertainment of the similar genera had a character with a yellow jacket. With my research I came up with Tim Burtons’ 2009 film Coraline. With this book, videogame and movie in mind I created three yellow jackets with different props in each poster to tell three different stories.</p>
+        <p class="milli"></p>
       </div>
     </div>
   </section>
