--- a/canadian.html
+++ b/canadian.html
@@ -6,32 +6,36 @@ layout: default
     <h3 class="island">Canadian</h3>
     <div class="pieces grid">
 
+      <div class="card unit s-1 m-1-2 l-3-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/coffee.jpg" alt="">
+      </div>
+
+      <div class="unit s-1 m-1-2 l-1-4 island">
+        <p class="milli">With 2017 being the 150<sup>th</sup> anniversary of Canada it gave me an opportunity to create logos and merchandise to commemorate the event but aren't limited to 2017 only. I started off by creating sketches of things that represented Canada. After lots of generic beaver, hockey and maple leaf sketches I focused my sketches on creating a lumberjack since it was the most unique approach.</p>
+      </div>
+
       <div class="card unit s-1 m-1-2 island">
-        <img class="" src="{{site.baseurl}}/images/nerd/shirt.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/sketch.jpg" alt="">
       </div>
 
-      <div class="unit s-1 m-1-2 island">
-        <p class="milli"> With the crazy success of the 2017’s remake of Stephen Kings’ IT I wanted to create a poster to showcase the film with an illustrative look. Before starting sketches I did my research on simplistic posters to see what kind of approaches other artists have taken. My biggest inspiration for simplistic posters was the work of Saul Bass. </p>
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/logos.jpg" alt="">
       </div>
 
-      <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/jackets/thought.png" alt="">
+
+      <div class="card unit s-1 m-1 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/stag.jpg" alt="">
       </div>
 
-      <div class="unit s-1 m-1-3 island">
-        <p class="milli">After getting inspiration I began brainstorming ideas for a poster by creating a spider graph. With this I was able to write down everything that came to mind when thinking about the movie. During my brainstorming I made connections to several other books, films and games. Connections that would not be made right away. The connections that caught my attention were the common connection between the movie and one of my favourite video games entitled Little Nightmares. Although two completely different horror stories they each have a child that sports a yellow jacket. Furthermore I was able to come up with another fantasy/thriller movie that included a child with a yellow jacket, Tim Burtons' Coraline. </p>
+      <div class="unit multi s-1 m-1 l-1-2 island">
+        <p class="milli">The approach decided to go with was drawing a lumberjack's face with a maple leaf and forest behind him. After a few takes the forest began to look like to much behind the lumberjack for a simple logo. With the leaf behind the head I extended the bottom of the leaf and infused it with the plaid to make it part of the lumberjacks body to connect the two pieces.</p>
+        <p class="milli">The plaid I used with the lumberjack logo gave inspiration for another piece. I wanted to design a commemorative Canada 150 piece. One of the most iconic things in Canada is maple syrup so I began creating designs for maple syrup bottles. To make the syrup more unique and stand out from any other ones I created a wine bottle that would carry out the plaid look along with a box to go in.</p>
+        <p class="milli">With the design of the bottle lable and box I wanted to keep it simple and use simple lines like the lumberjack logo. I wanted to use red and white for the look since they are the Canadian colours but also use black to give it a more dark and bold look. To complement the plaid I went with a black board look on the bottle and used a white hand written font to look like chalk.</p>
       </div>
 
-      <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/jackets/sketch.jpg" alt="">
-      </div>
 
-      <div class="unit s-1 m-1-3 island">
-        <p class="milli">With the yellow jacket connection between this book, videogame and movie I decided to create a multi poster piece and create a poster for each creation. With research done for each piece I began making sketches to come up with a look for each poster. Each poster would be created with a yellow jacket but use different props in each poster to tell three different stories.</p>
-      </div>
-
-      <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/jackets/case.jpg" alt="">
+      <div class="card unit s-1 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/sign.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
