--- a/iscream.html
+++ b/iscream.html
@@ -6,21 +6,26 @@ layout: default
     <h3 class="island">I Scream</h3>
     <div class="pieces grid">
 
-      <div class="card unit s-1 m-2-3 island">
+      <div class="card unit m-1 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/i-scream-screans.jpg" alt="">
       </div>
 
-      <div class="unit s-1 m-1-3 island">
+      <div class="unit m-1 l-1-2 island">
         <p class="milli">I Scream is an application that helps users find local establishments that serve icecream. It allows icecream lovers to easily find icecream in the area that serves their needs. </p>
         <p class="milli">Since icecream is one of my favourite things to eat I began wondering if I could turn my love of icecream into a new application that could help myself and other people find icecream easily in their area and that meets their dietary restrictions. Because I'm lactose intolerant it is hard for me to find icecream that is lactose free. Also because I try to get the best deals on everything I find it hard to find icecream shops that sell quality icecream but for a reasonable price.
         With this in mind I started to piece some other information together to try and come up with a problem statement that could drive my create of the app.</p>
       </div>
 
-      <div class="card unit s-1 m-2-3 island">
+      <div class="card unit s-1 m-1-2 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/sketch1.jpg" alt="">
+      </div>
+
+      <div class="card unit s-1 m-1-2 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/flow.png" alt="">
       </div>
 
-      <div class="unit s-1 m-1-3 island">
+    <div class="grid lists">
+      <div class="unit s-1 m-1-2 l-1-4 island">
         <h6>What users say</h6>
         <ul class="list milli">
           <li>What kind of ice-cream do they have</li>
@@ -28,21 +33,27 @@ layout: default
           <li>Is this fat free ice-cream</li>
           <li>Do you have lactose free options</li>
         </ul>
+      </div>
 
+      <div class="unit s-1 m-1-2 l-1-4 island">
         <h6>What users think</h6>
         <ul class="list milli">
           <li>This ice-cream flavours look good</li>
           <li>They make the cream cone look like art</li>
           <li>This store is instagram worth</li>
         </ul>
+      </div>
 
+      <div class="unit s-1 m-1-2 l-1-4 island">
         <h6>What users feel</h6>
         <ul class="list milli">
           <li>Happy, excited, joyful</li>
           <li>Bloated, fat, full, hungry</li>
           <li>Brain freeze, hot and needing to cool off</li>
         </ul>
+      </div>
 
+      <div class="unit s-1 m-1-2 l-1-4 island">
         <h6>What users do</h6>
         <ul class="list milli">
           <li>Search for locations</li>
@@ -50,18 +61,22 @@ layout: default
           <li>Look at icecream types, topings, cones</li>
         </ul>
       </div>
+    </div>
 
-      <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/rectangle.jpg" alt="">
+      <div class="card unit s-1 m-1-2 l-3-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/sketch2.jpg" alt="">
       </div>
 
-      <div class="unit s-1 m-1-3 island">
+      <div class="unit s-1 m-1-2 l-1-4 island">
         <p class="milli">When evaluation what users feel during their icecream shop experience I came up with the problem statement, <strong>Ice cream lovers need a way to easily view whats offered at ice-cream shops because they want to know their options.</strong> With this knowledge in had I came up with three different flows that my app should include to support my users needs.</p>
-        <p class="milli">To get the best understanding for the app I created sketches of the screens to see how the flow would work. Once that was planned out I was able to test it out with interactive screens and then final create an animation to display the app and give viewers a visual experience.</p>
       </div>
 
-      <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/i-scream/phone.jpg" alt="">
+      <div class="card unit s-1 m-1-2 l-3-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/phone.jpg" alt="">
+      </div>
+
+      <div class="unit s-1 m-1-2 l-1-4 island">
+        <p class="milli">To get the best understanding for the app I created sketches of the screens to see how the flow would work. Once that was planned out I was able to test it out with interactive screens and then final create an animation to display the app and give viewers a visual experience.</p>
       </div>
 
       <div class="embed embed-16by9">
