--- a/nerd.html
+++ b/nerd.html
@@ -3,35 +3,39 @@ layout: default
 ---
 
   <section class="workbody">
-    <h3 class="island">Yellow Jacket</h3>
+    <h3 class="island">Gamer</h3>
     <div class="pieces grid">
 
-      <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/nerd/shirt.jpg" alt="">
+      <div class="card unit s-1 m-1 l-3-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/hat.jpg" alt="">
       </div>
 
-      <div class="unit s-1 m-1-3 island">
-        <p class="milli"> With the crazy success of the 2017’s remake of Stephen Kings’ IT I wanted to create a poster to showcase the film with an illustrative look. Before starting sketches I did my research on simplistic posters to see what kind of approaches other artists have taken. My biggest inspiration for simplistic posters was the work of Saul Bass. </p>
+      <div class="unit s-1 m-1 l-1-4 island">
+        <p class="milli">Video games were the reason I got into graphic design. In my spare time I would make posters to advertise my favourite games without really knowing where else I could take it. Over the years I have learnt how to apply these designs to many different mediums and not just on paper. Because video games are so popular </p>
       </div>
 
-      <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/jackets/thought.png" alt="">
+      <div class="card unit s-1 m-1-2 l-3-4 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/sketch.jpg" alt="">
       </div>
 
-      <div class="unit s-1 m-1-3 island">
-        <p class="milli">After getting inspiration I began brainstorming ideas for a poster by creating a spider graph. With this I was able to write down everything that came to mind when thinking about the movie. During my brainstorming I made connections to several other books, films and games. Connections that would not be made right away. The connections that caught my attention were the common connection between the movie and one of my favourite video games entitled Little Nightmares. Although two completely different horror stories they each have a child that sports a yellow jacket. Furthermore I was able to come up with another fantasy/thriller movie that included a child with a yellow jacket, Tim Burtons' Coraline. </p>
+      <div class="unit s-1 m-1-2 l-1-4 island">
+        <p class="milli">When I get into a new game it provides may new oportunities for sketching and idea making. Since the release of the Nintendo Switch, Nintendo has introduced many Mario games which introduced many new inspirations. There are so many different ways to represent this game and have it still be recognizable by everyone, and not just gamers.</p>
       </div>
 
-      <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/jackets/sketch.jpg" alt="">
+      <div class="card unit s-1 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/long.jpg" alt="">
       </div>
 
-      <div class="unit s-1 m-1-3 island">
-        <p class="milli">With the yellow jacket connection between this book, videogame and movie I decided to create a multi poster piece and create a poster for each creation. With research done for each piece I began making sketches to come up with a look for each poster. Each poster would be created with a yellow jacket but use different props in each poster to tell three different stories.</p>
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/mug.jpg" alt="">
       </div>
 
-      <div class="card unit s-1 m-2-3 island">
-        <img class="" src="{{site.baseurl}}/images/jackets/case.jpg" alt="">
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/man.jpg" alt="">
+      </div>
+
+      <div class="card unit s-1 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/shoes.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-3 island">
