--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ layout: default
 <section id="contact" class="grid contact-me text-center">
   <h2 class="unit xs-1 pad-t-2">CONTACT ME</h2>
   <!--FORM-->
-  <form class="unit xs-1" action="https://formspree.io/jaimie.erin@yahoo.ca" method="POST">
+  <form class="unit xs-1" action="https://formspree.io/hey@jaimieporter.ca" method="POST">
     <div class="push">
       <label for="name">NAME</label>
       <input id="name" name="name" required>
