new edits to official website

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ layout: default
     </div>
 
     <div class="unit island bannertext s-2-3">
-      <h2 class="">Welcome</h2>
-      <p>My name is Jaimie and I am a graphic designer located in Ottawa, Ontario. I specialize in <strong>illustration</strong>, <strong>branding</strong> and <strong>motion</strong></p>
+      <h1 class="">Hey There!</h1>
+      <p>My name is Jaimie and I am a graphic designer located in Ottawa, Ontario. I specialize in <strong>illustration</strong>, <strong>branding</strong> and <strong>motion</strong>.</p>
     </div>
   </div>
 </div>
