--- a/nerd.html
+++ b/nerd.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
   <section class="workbody">
-    <h3 class="island">Gamer</h3>
+    <h3 class="island">Nerd Alert</h3>
     <div class="pieces grid">
 
       <div class="card unit s-1 m-1 l-3-4 island">
