--- a/fox.html
+++ b/fox.html
@@ -19,7 +19,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">With a name in mind I began the sketching phase to come up with a wordmark and a signature look for the brand. To keep the coffee shop look I did research on what coffee shop logos look like and what they are missing. After playing around with the type for the wordmark I was able to substitute the <i>O</i> with a coffee bean. With this look I was able to icorporate iconography into my word mark and have it still be legible.</p>
+        <p class="milli">With a name in mind I began the sketching phase to come up with a wordmark and a signature look for the brand. To keep the coffee shop look I did research on what coffee shop logos look like and what they are missing. After playing around with the type for the wordmark I was able to substitute the <i>O</i> with a coffee bean. With this look I was able to incorporate iconography into my word mark and have it still be legible.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
@@ -27,7 +27,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">Since the coffee bean gave the logo a signature look I incorporate it into the rest of the brand by using it to cover tins and coffee cups. To go along with the black I used a maroon to give it a more sophisticated and eligant look to go along more with the target audience. I also wanted to stear away from the greens, browns and reds that other popular coffee shops use to make this brand more unique.</p>
+        <p class="milli">Since the coffee bean gave the logo a signature look I incorporate it into the rest of the brand by using it to cover tins and coffee cups. To go along with the black I used a maroon to give it a more sophisticated and elegant look to go along more with the target audience. I also wanted to steer away from the greens, browns and reds that other popular coffee shops use to make this brand more unique.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 island">
