--- a/iscream.html
+++ b/iscream.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
   <section class="workbody">
+    <a class="back" href="{{site.baseurl}}/">Back</a>
     <h3 class="island">I Scream</h3>
     <div class="pieces grid">
 
@@ -40,7 +41,7 @@ layout: default
         <ul class="list milli">
           <li>This ice-cream flavours look good</li>
           <li>They make the cream cone look like art</li>
-          <li>This store is instagram worth</li>
+          <li>This store is Instagram worth</li>
         </ul>
       </div>
 
@@ -58,7 +59,7 @@ layout: default
         <ul class="list milli">
           <li>Search for locations</li>
           <li>Look at menu, prices</li>
-          <li>Look at icecream types, topings, cones</li>
+          <li>Look at icecream types, toppings, cones</li>
         </ul>
       </div>
     </div>
@@ -72,7 +73,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/phone.jpg" alt="">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/screen.jpg" alt="">
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
