--- a/nerd.html
+++ b/nerd.html
@@ -19,7 +19,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">When I get into a new game it provides may new oportunities for sketching and idea making. Since the release of the Nintendo Switch, Nintendo has introduced many Mario games which introduced many new inspirations. There are so many different ways to represent this game and have it still be recognizable by everyone, and not just gamers.</p>
+        <p class="milli">When I get into a new game it provides may new opportunities for sketching and idea making. Since the release of the Nintendo Switch, Nintendo has introduced many Mario games which introduced many new inspirations. There are so many different ways to represent this game and have it still be recognizable by everyone, and not just gamers.</p>
       </div>
 
       <div class="card unit s-1 island">
