--- a/blurry.html
+++ b/blurry.html
@@ -11,7 +11,7 @@ layout: default
       </div>
 
       <div class="unit s-1 m-1 l-1-2 island">
-        <p class="milli">During my time in the graphic design program I got to redesign a brand for a small company. The Blurry Pixel is a small gaming bar in downtown Ottawa where people can get drinks and play video games into the night. The owner came up with the name <i>The Blurry Pixel</i> because when you start to stare at a screen for a long time things start to blur and look pixelated. The colours green and black were chosen because that was the colour of monochrome monitors which were very common in the early days of computing.</p>
+        <p class="milli">During my time in the graphic design program I got to do a mockup rebranding for a small company. The Blurry Pixel is a small gaming bar in downtown Ottawa where people can get drinks and play video games into the night. The owner came up with the name <i>The Blurry Pixel</i> because when you start to stare at a screen for a long time things start to blur and look pixelated. The colours green and black were chosen because that was the colour of monochrome monitors which were very common in the early days of computing.</p>
       </div>
 
       <div class="card unit s-1 m-1 l-1-2 island">
