--- a/blurry.html
+++ b/blurry.html
@@ -22,19 +22,19 @@ layout: default
         <p class="milli">The company used a wordmark to advertise the location. The name of the establishment is typed in a green pixel font that is easily recognizable but not very visually appealing. To redesign the brand I began coming up with logos sketches for the company. During the sketching process I tried to keep gaming aspects in the art since the bar's main feature is its video games. Further more when using gaming icons I wanted to use something that would be easily recognizable to people who do not play video games.</p>
       </div>
 
-      <div class="card unit s-1 m-1 l-1-2 island">
+      <div class="card unit s-1 m-1-2 l-3-4 island">
         <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/logos.jpg" alt="">
       </div>
 
-      <div class="unit s-1 m-1 l-1-2 island">
+      <div class="unit s-1 m-1-2 l-1-4 island">
         <p class="milli">Once two top logos were picked I played around with the original company colours since the owner wanted those to stay. The colours were applied in many different ways to find the most appealing look. Since every logo should have a coloured version and a black and white version I then tried different ways to apply the black and white to make it stand out.</p>
       </div>
 
-      <div class="card unit s-1 m-1 l-1-2 island">
+      <div class="card unit s-1 m-1-2 l-3-4 island">
         <img class="portfolio-piece " src="{{site.baseurl}}/images/blurry/final.jpg" alt="">
       </div>
 
-      <div class="unit s-1 m-1 l-1-2 island">
+      <div class="unit s-1 m-1-2 l-1-4 island">
         <p class="milli">Once a final logo was chosen in colour and in black and white I was able to create a branding guide for the company. The branding guide shows how the logos, wordmarks, colours and photography should be used.</p>
       </div>
     </div>
